# face-detection-alignment

./: main.py  pyproject.toml  rotation_angel.py
